; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/input_hw/extr_lightgun.c_menacer_read.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/input_hw/extr_lightgun.c_menacer_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@input = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i8 @menacer_read() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @input, i32 0, i32 0), align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 4
  %4 = load i32, i32* %3, align 4
  %5 = ashr i32 %4, 4
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* %1, align 4
  %7 = and i32 %6, 9
  %8 = load i32, i32* %1, align 4
  %9 = lshr i32 %8, 1
  %10 = and i32 %9, 2
  %11 = or i32 %7, %10
  %12 = load i32, i32* %1, align 4
  %13 = shl i32 %12, 1
  %14 = and i32 %13, 4
  %15 = or i32 %11, %14
  %16 = or i32 %15, 64
  %17 = trunc i32 %16 to i8
  ret i8 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
